--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <!--UNICONS-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-    <title>Netflix</title>
+    <title>Netfli</title>
 </head>
 
 <body>
